--- a/.travis.yml
+++ b/.travis.yml
@@ -34,7 +34,7 @@ before_script:
   - ./cc-test-reporter before-build
 
 script:
-  - python3 manage.py compilemessages && coverage run manage.py test assistant --exclude-tag=selenium
+  - python3 manage.py compilemessages && coverage run --source='assistant' manage.py test assistant --exclude-tag=selenium
 
 after_script:
   - coverage xml
