--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
--r base-requirements.txt
+-r ../base-requirements.txt
 et-xmlfile==1.0.1
 jdcal==1.4
 pika==0.12.0
 
--r ./osis_common/requirements.txt
--r ./internship/requirements.txt
+-r ../osis_common/requirements.txt
+-r ../internship/requirements.txt
